--- a/src/components/header/header-fixed/HeaderFixed.module.css
+++ b/src/components/header/header-fixed/HeaderFixed.module.css
@@ -1,3 +1,6 @@
+.header__fixed__wrapper {
+    background-color: #f3f3f3;
+}
 .header__fixed__inner {
     padding: 5px;
     display: flex;
@@ -153,6 +156,7 @@
 
 .header__search__catalog {
     height: 100%;
+    cursor: pointer;
 }
 
 .header__category__btn {
