--- a/src/components/catalog-mobile/CatalogMobile.module.css
+++ b/src/components/catalog-mobile/CatalogMobile.module.css
@@ -6,11 +6,13 @@
     height: 100vh;
     z-index: 2;
 }
+
 .catalog__wrapper {
     width: 100%;
     display: flex;
     flex-direction: column;
 }
+
 .catalog__header {
     width: 100%;
     height: 46px;
@@ -20,19 +22,23 @@
     justify-content: space-between;
     background-color: #333;
 }
+
 .catalog__close {
     font-size: 20px;
     color: #fff;
 }
+
 .catalog__body {
     background-color: #fff;
     max-height: calc(100vh - 46px);
     overflow-y: scroll;
 }
+
 .catalog__list {
     width: 100%;
     padding: 0 0 40px;
 }
+
 .catalog__item {
     width: 100%;
     display: flex;
@@ -45,16 +51,20 @@
     letter-spacing: .1px;
     color: #333;
 }
+
 .catalog__item__inner {
     display: flex;
     align-items: center;
 }
+
 .catalog__icon {
     margin-right: 10px;
 }
+
 .catalog__nextBtn {
     font-size: 19px;
 }
+
 .catalog__option {
     position: absolute;
     inset: 0;
@@ -62,9 +72,11 @@
     background-color: #fff;
     height: 100vh;
 }
+
 .catalog__box {
     width: 100%;
 }
+
 .option__header {
     font-size: 14px;
     line-height: 24px;
@@ -77,14 +89,18 @@
     display: flex;
     align-items: center;
 }
+
 .option__header__icon {
     font-size: 20px;
     color: gray;
     margin-right: 2.5rem;
 }
+
 .option__item {
+    position: relative;
     padding: 10px 16px 10px 50px;
 }
+
 .option__btn {
     width: 100%;
     display: flex;
@@ -96,10 +112,37 @@
     font-size: 20px;
     color: gray;
 }
+
 .option__box {
     font-size: 14px;
     line-height: 24px;
     letter-spacing: .1px;
     color: #333;
     font-weight: 400;
+}
+
+.option__dropdown {
+    position: absolute;
+    bottom: 0;
+    display: none;
+}
+
+.submenu__box {
+    padding-left: 54px;
+}
+
+.option__inner__item {
+    padding: 12px 16px;
+    font-weight: 400;
+    letter-spacing: .1px;
+    width: 100%;
+}
+
+.div__key {
+    width: 100%;
+    padding: 12px 16px;
+    font-weight: 400;
+    letter-spacing: .1px;
+    font-size: 14px;
+    color: #333;
 }
