--- a/src/components/catalog-desktop/CatalogDesktop.module.css
+++ b/src/components/catalog-desktop/CatalogDesktop.module.css
@@ -1,41 +1,119 @@
 .catalog__section {
-    position: absolute;
-    z-index: 6;
-    width: 100%;
-    background-color: #fff;
-    box-shadow: 0 4px 8px rgb(0 0 0 / 8%);
+    display: none;
 }
-.catalog__inner {
-    display: flex;
-    width: 100%;
-}
-.catalog__left {
-    width: 340px;
-}
-.catalog__nav {
-    padding: 10px 0;
-    overflow-y: scroll;
-    height: calc(70vh - 30px);
-    width: calc(100% + 16px);
-    transform: translateX(-16px);
-}
-.catalog__item {
-    padding-right: 20px;
-    letter-spacing: .1px;
-    display: flex;
-    justify-content: space-between;
-    padding: 12px 16px;
-    align-items: center;
-    border-radius: 6px;
-    height: 48px;
-}
-.catalog__item:hover {
-    background-color: rgba(251,193,0,.2);
-}
-.catalog__active {
-    display: flex;
-    align-items: center;
-}
-.item__type {
-    margin-left: 1rem;
+
+
+@media screen and (min-width: 1024px) {
+    .catalog__section {
+        display: block;
+        position: absolute;
+        z-index: 6;
+        width: 100%;
+        height: 70vh;
+        background-color: #fff;
+        box-shadow: 0 4px 8px rgb(0 0 0 / 8%);
+    }
+
+    .catalog__inner {
+        display: flex;
+        width: 100%;
+    }
+
+    .catalog__left {
+        width: 340px;
+    }
+
+    .catalog__nav {
+        padding: 10px 0;
+        overflow-y: scroll;
+        height: calc(70vh - 30px);
+        width: calc(100% + 16px);
+        transform: translateX(-16px);
+    }
+
+    .catalog__item {
+        padding-right: 20px;
+        letter-spacing: .1px;
+        display: flex;
+        justify-content: space-between;
+        padding: 12px 16px;
+        align-items: center;
+        border-radius: 6px;
+        height: 48px;
+    }
+
+    .catalog__item:hover {
+        background-color: rgba(251, 193, 0, .2);
+    }
+
+    .catalog__active {
+        display: flex;
+        align-items: center;
+    }
+
+    .item__type {
+        margin-left: 1rem;
+    }
+
+    .catalog__right {
+        width: calc(100% - 340px);
+        height: calc(70vh - 30px);
+        overflow-y: scroll;
+        padding: 33px 0 28px 40px;
+    }
+
+    .right__wrapper {
+        display: grid;
+        grid-template-columns: auto auto auto auto;
+    }
+
+    .right__item {
+        padding: 0 12px;
+    }
+
+    .right__title {
+        font-weight: 500;
+        font-size: 20px;
+        line-height: 28px;
+        margin-bottom: 30px;
+    }
+
+    .right__product__type {
+        text-transform: uppercase;
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 20px;
+        display: inline-block;
+        margin-bottom: 16px;
+        text-decoration: none;
+        color: #333;
+        border: 2px solid transparent;
+    }
+
+    .right__product__type:hover {
+        border-bottom: 2px dotted yellow;
+    }
+
+    .right__list {
+        margin-bottom: 10px;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .right__inner__text {
+        margin-bottom: 12px;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 20px;
+        display: block;
+        color: rgba(51, 51, 51, .8);
+        text-decoration: none;
+        border: 1px solid transparent;
+    }
+
+    .right__inner__text:hover {
+        color: #000;
+        border-bottom: 1px dotted #333;
+    }
 }
