--- a/src/index.css
+++ b/src/index.css
@@ -73,16 +73,34 @@
   margin: 0 auto;
   padding: 0 10px;
 }
-
-.swiper__btn__prev {
+.swiper__btn {
+  display: none;
+  width: 40px;
+  height: 40px;
+  border-radius: 100%;
+  background-color: #fff !important;
+  border: 1px solid #ececec;
+  top: 50%;
+  transform: translateY(-50%);
+  position: absolute;
+  z-index: 3;
+  cursor: pointer;
+  font-size: 20px;
+  align-items: center;
+  justify-content: center;
+}
+.swiper__btn__prev, .catalog__swiper__prev {
   left: -20px;
 }
-.swiper__btn__next {
-  right: calc(40px / -2);
+.swiper__btn__next, .catalog__swiper__next {
+  right: -20px;
 }
 
 @media screen and (min-width: 1024px) {
   .container {
     padding: 0px 32px;
+  }
+  .swiper__btn {
+    display: flex;
   }
 }
