--- a/src/components/catalog-slider/CatalogSlider.module.css
+++ b/src/components/catalog-slider/CatalogSlider.module.css
@@ -14,24 +14,55 @@
 .catalog__swiper {
     position: relative;
 }
+
+.product__box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    cursor: pointer;
+}
+
 .catalog__slide {
     display: flex;
     align-items: center;
     justify-content: center;
+    width: 100%;
     height: 94px;
     background: #fff;
-    border: 1px solid hsla(0,0%,92.5%,.7);
+    border: 1px solid hsla(0, 0%, 92.5%, .7);
     box-shadow: 0 2px 24px rgb(0 0 0 / 6%);
     border-radius: 12px;
     margin-bottom: 8px;
 }
+
 .category__type {
     display: none;
 }
+
 .catalog__mobile__text {
     display: flex;
     align-items: center;
     justify-content: centerx;
     font-size: .875rem;
     line-height: 1.25rem;
+}
+
+@media screen and (min-width: 1024px) {
+    
+    .catalog__slide {
+        padding: 16px 24px;
+        height: 70px;
+    }
+
+    .category__type {
+        display: block;
+        text-align: left;
+        margin-left: 24px;
+        font-size: 14px;
+    }
+
+    .catalog__mobile__text {
+        display: none;
+    }
 }
