--- a/src/components/login/Login.module.css
+++ b/src/components/login/Login.module.css
@@ -1,15 +1,19 @@
 .login__content {
     position: fixed;
     inset: 0;
-    z-index: 10;
-    background-color: #fff;
+    z-index: 5;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .login__inner {
+    background-color: #fff;
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 100%;
 }
 
 .login__header {
@@ -25,6 +29,7 @@
     font-weight: 500;
     font-size: 16px;
     line-height: 24px;
+    cursor: pointer;
 }
 
 .login__close {
@@ -97,4 +102,17 @@
     letter-spacing: .4px;
     color: #333;
     padding: 11px 10px;
+}
+
+
+@media screen and (min-width: 480px) {
+   .login__content {
+       max-width: 450px;
+       height: auto;
+       margin: 0 auto;
+   } 
+   .login__inner {
+       border-radius: 8px;
+       overflow: hidden;
+   }
 }
