--- a/src/components/navbar-mobile/NavbarMobile.module.css
+++ b/src/components/navbar-mobile/NavbarMobile.module.css
@@ -25,6 +25,23 @@
     font-size: 22px;
     margin-bottom: 4px;
 }
+.product__count {
+    position: absolute;
+    top: -2px;
+    right: 0;
+    width: 18px;
+    height: 18px;
+    font-weight: 500;
+    font-size: 11px;
+    line-height: 13px;
+    background-color: #fbc100;
+    border: 2px solid #fff;
+    color: #333;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+}
 
 
 @media screen and (min-width: 1024px) {
