--- a/src/components/product-cart/ProductCart.module.css
+++ b/src/components/product-cart/ProductCart.module.css
@@ -51,6 +51,56 @@ button {
     align-items: center;
 }
 
+.product__inCart {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-grow: 1;
+}
+
+.product__saved {
+    background-color: #fff;
+    cursor: pointer;
+    padding: 7px 12px;
+    height: 38px;
+    border: 2px solid #fbc100;
+    border-radius: 6px;
+}
+
+.product__count {
+    border: 1px solid #ececec;
+    border-radius: 6px;
+    display: flex;
+    align-items: center;
+}
+
+.product__num {
+    width: 32px;
+    height: 32px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 18px;
+}
+
+.product__amount {
+    width: 32px;
+    height: 32px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 400;
+}
+
+.product__cart__btn {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+}
+
 .shopping__btn {
     border-radius: 6px;
     padding: 7px 12px;
@@ -72,7 +122,7 @@ button {
 }
 
 .icon__before {
-    display: none;
+    display: block;
 }
 
 .basket__text {
@@ -99,6 +149,7 @@ button {
     .basket__text {
         display: block;
     }
+
     .action__btn {
         margin-left: 10px;
     }
