--- a/src/components/header/header-fixed/HeaderFixed.module.css
+++ b/src/components/header/header-fixed/HeaderFixed.module.css
@@ -1,5 +1,11 @@
 .header__fixed__wrapper {
     background-color: #f3f3f3;
+    width: 100%;
+}
+.sticky {
+    top: 0;
+    position: fixed;
+    z-index: 4;
 }
 
 .header__fixed__inner {
