--- a/src/routes/pdp/Pdp.module.css
+++ b/src/routes/pdp/Pdp.module.css
@@ -105,3 +105,72 @@
     height: 100%;
     object-fit: contain;
 }
+.product__icon {
+    display: none;
+}
+.detail__middle {
+    display: none;
+}
+.detail__right {
+    margin-top: 2.5rem;
+}
+.detail__btns {
+    box-shadow: 0 4px 20px rgb(0 0 0 / 12%);
+    border-radius: 8px;
+    padding: 1rem;
+    margin-bottom: 1.25rem;
+}
+.detail__price {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 1rem;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 110%;
+}
+.price__right {
+    display: flex;
+    align-items: center;
+}
+.product__priceIcon {
+    font-size: 22px;
+    color: #333;
+    margin-left: 10px;
+}
+.product__buy {
+    background-color: #fbc100;
+    border-radius: 6px;
+    border: none;
+    outline: none;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: .2px;
+    height: 52px;
+    margin-bottom: 24px;
+    cursor: pointer;
+    box-shadow: 0 2px 0 #d5a401;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
+.product__inCart, .product__addCart {
+    display: flex;
+}
+.product__cardIcon {
+    font-size: 20px;
+    margin-right: 10px;
+}
+.product__oneClick {
+    width: 100%;
+    background-color: #fff;
+    border-radius: 6px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: .2px;
+    height: 52px;
+    cursor: pointer;
+    border: 2px solid #fbc100;
+}
